force-app/main/default/objects/Refund__c/Refund__c.object-meta.xml
<CustomObject>
    <description>Tracks refunds issued to customers for orders, service issues, or other compensation scenarios in the Pronto delivery platform.</description>
    <label>Refund</label>
    <nameField>
        <displayFormat>REF-{0000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>