force-app/main/default/objects/Refund__c/fields/Storefront__c.field-meta.xml
<CustomField>
    <fullName>Storefront__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The storefront location associated with this refund.</description>
    <label>Storefront</label>
    <referenceTo>Storefront__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>